--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,17 +9,20 @@
     = link_to Settings.app_name, :root
 
     - if signed_in?
-      = render partial: '/layouts/user_icon', locals: { user: current_user, size: "18x18", klass: "margin_minus2" }
-      = link_to "Top",    root_path
-      = link_to "Logout", logout_path
+      = render partial: '/layouts/user_icon', locals: { user: current_user, size: '18x18', klass: 'margin_minus2' }
+      = "ユーザー名: #{current_user.twitter.name}"
+      = ' | '
+      = link_to 'トップページ',    root_path
+      = ' | '
+      = link_to 'ユーザー情報の編集', user_path(current_user)
+      = ' | '
+      = link_to 'ログアウト', logout_path
     - else
       Login:
       = link_to 'Twitter',  '/auth/twitter'
-      = link_to 'Facebook', '/auth/facebook'
-      = link_to 'GitHub',   '/auth/github'
 
-    = simple_format(flash[:notice], style: "color: green;") if flash[:notice].present?
-    = simple_format(flash[:alert], style: "color: red;")    if flash[:alert].present?
+    = simple_format(flash[:notice], style: 'color: green;') if flash[:notice].present?
+    = simple_format(flash[:alert], style: 'color: red;')    if flash[:alert].present?
 
     = yield
 
@@ -28,11 +31,11 @@
 
     %center
       Developed by
-      = succeed "," do
+      = succeed ',' do
         %a{ href: "https://twitter.com/#{Settings.programmer_twitter_id}/", target: '_blank' }
           = "@#{Settings.programmer_twitter_id}"
       Designed by
-      = succeed "," do
+      = succeed ',' do
         %a{ href: "https://twitter.com/#{Settings.designer_twitter_id}/", target: '_blank' }
           = "@#{Settings.designer_twitter_id}"
       Licence by
